--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -16,6 +16,65 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{bailer-jones2018,
+       author = {{Bailer-Jones}, C.~A.~L. and {Rybizki}, J. and {Fouesneau}, M. and
+         {Mantelet}, G. and {Andrae}, R.},
+        title = "{Estimating Distance from Parallaxes. IV. Distances to 1.33 Billion Stars in Gaia Data Release 2}",
+      journal = {\aj},
+     keywords = {catalogs, Galaxy: structure, methods: statistical, stars: distances, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = "2018",
+        month = "Aug",
+       volume = {156},
+       number = {2},
+          eid = {58},
+        pages = {58},
+          doi = {10.3847/1538-3881/aacb21},
+archivePrefix = {arXiv},
+       eprint = {1804.10121},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156...58B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{sellwood2014,
+       author = {{Sellwood}, J.~A.},
+        title = "{Secular evolution in disk galaxies}",
+      journal = {Reviews of Modern Physics},
+     keywords = {98.52.-b, Normal galaxies, extragalactic objects and systems, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2014",
+        month = "Jan",
+       volume = {86},
+       number = {1},
+        pages = {1-46},
+          doi = {10.1103/RevModPhys.86.1},
+archivePrefix = {arXiv},
+       eprint = {1310.0403},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014RvMP...86....1S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{beane2018,
+       author = {{Beane}, Angus and {Ness}, Melissa K. and {Bedell}, Megan},
+        title = "{Actions Are Weak Stellar Age Indicators in the Milky Way Disk}",
+      journal = {\apj},
+     keywords = {Galaxy: evolution, Galaxy: kinematics and dynamics, solar neighborhood, stars: kinematics and dynamics, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = "2018",
+        month = "Nov",
+       volume = {867},
+       number = {1},
+          eid = {31},
+        pages = {31},
+          doi = {10.3847/1538-4357/aae07f},
+archivePrefix = {arXiv},
+       eprint = {1807.05986},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...867...31B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{2013MNRAS.432.1203M,
        author = {{McQuillan}, A. and {Aigrain}, S. and {Mazeh}, T.},
         title = "{Measuring the rotation period distribution of field M dwarfs with Kepler}",
@@ -450,7 +509,7 @@ archivePrefix = {arXiv},
             with empirical gyrochronology}",
       journal = {\aj},
      keywords = {stars: activity, stars: evolution, stars: magnetic field, stars: rotation, stars: solar-type, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
-         year = "in prep",
+         year = "2019",
  primaryClass = {astro-ph.SR},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
