adding period gap section and some rewriting

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -504,7 +504,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{angus2019,
-       author = {{Angus {\it et al.}}, Ruth},
+       author = {{Angus et al.}, Ruth},
         title = "{Towards precise stellar ages: combining isochrone fitting
             with empirical gyrochronology}",
       journal = {\aj},
@@ -683,6 +683,81 @@ Title = {{Astropy: A community Python package for astronomy}},
 Volume = 558,
 Year = 2013,
 Bdsk-Url-1 = {https://dx.doi.org/10.1051/0004-6361/201322068}}
+
+@ARTICLE{davenport2018,
+       author = {{Davenport}, James R.~A. and {Covey}, Kevin R.},
+        title = "{Rotating Stars from Kepler Observed with Gaia DR2}",
+      journal = {\apj},
+     keywords = {stars: evolution, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2018",
+        month = "Dec",
+       volume = {868},
+       number = {2},
+          eid = {151},
+        pages = {151},
+          doi = {10.3847/1538-4357/aae842},
+archivePrefix = {arXiv},
+       eprint = {1807.09841},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...868..151D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mcquillan2013,
+       author = {{McQuillan}, A. and {Aigrain}, S. and {Mazeh}, T.},
+        title = "{Measuring the rotation period distribution of field M dwarfs with Kepler}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, stars: evolution, stars: low-mass, stars: magnetic field, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2013",
+        month = "Jun",
+       volume = {432},
+       number = {2},
+        pages = {1203-1216},
+          doi = {10.1093/mnras/stt536},
+archivePrefix = {arXiv},
+       eprint = {1303.6787},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013MNRAS.432.1203M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reinhold2019,
+       author = {{Reinhold}, Timo and {Bell}, Keaton J. and {Kuszlewicz}, James and
+         {Hekker}, Saskia and {Shapiro}, Alexander I.},
+        title = "{Transition from spot to faculae domination. An alternate explanation for the dearth of intermediate Kepler rotation periods}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Jan",
+       volume = {621},
+          eid = {A21},
+        pages = {A21},
+          doi = {10.1051/0004-6361/201833754},
+archivePrefix = {arXiv},
+       eprint = {1810.11250},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...621A..21R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{davenport2017,
+       author = {{Davenport}, James R.~A.},
+        title = "{Rotating Stars from Kepler Observed with Gaia DR1}",
+      journal = {\apj},
+     keywords = {stars: general, stars: kinematics and dynamics, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2017",
+        month = "Jan",
+       volume = {835},
+       number = {1},
+          eid = {16},
+        pages = {16},
+          doi = {10.3847/1538-4357/835/1/16},
+archivePrefix = {arXiv},
+       eprint = {1610.08563},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...835...16D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{astropy2018,
 Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
