--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,8 +1,22 @@
 \section{Conclusion}
 
+We examined the gyrochronology relations using the velocity dispersions of
+field stars with measured rotation periods.
 We found that old groups of K dwarfs selected to be coeval using the
 \citet{angus2019} gyrochronology relation do {\it not} have the same velocity
 dispersion across all temperatures.
+It appears that the period-\teff\ relation changes shape over time: rotation
+period is negatively correlated with \teff\ at young ages, and positively
+correlated at old ages.
+The relation appears to start flattening out after $\sim$1 Gyr (see figure
+\ref{fig:age_cut}), potentially around the same age, or just older than the
+period gap which is located at a (gyro) age of around $\sim$1.1 Gyr.
+This gap may represent a significant transitional epoch in the magnetic
+behavior of stars.
+Finally, when velocity dispersion is interpreted as an age proxy, it appears
+that the oldest stars in the \mct\ catalog are cooler than 4500 K, which
+suggests that lower-mass stars remain active for longer and their rotation
+periods can be measured at older ages.
 % This indicates that either the \citep{angus2019} period-color relation is
 % incorrect, or that mass-dependent dynamical heating is affecting this data set.
 % We presented three pieces of evidence that suggest mass-dependent heating
@@ -41,20 +55,20 @@ dispersion across all temperatures.
 
 % \end{itemize}
 
-\racomment{Words about the significance of an inverted period-color relation.}
+% \racomment{Words about the significance of an inverted period-color relation.}
 
-\racomment{How does the weakened van Saders braking law fit into all this?}
+% \racomment{How does the weakened van Saders braking law fit into all this?}
 
-\racomment{Talk about the fact that the stars in each bin are not necessarily
-the same age.}
+% \racomment{Talk about the fact that the stars in each bin are not necessarily
+% the same age.}
 
-\racomment{Dispersion could be dependent on the selection function.
-We cut stars at high b, because we find that these do lead to a bias.
-We find no evidence for increased velocity dispersion with decreasing teff in
-either vb or vz.
-We find that sigma clipping is necessary for vb but not vz and do not find
-that the outliers are distributed towards higher galactic latitudes.
-}
+% \racomment{Dispersion could be dependent on the selection function.
+% We cut stars at high b, because we find that these do lead to a bias.
+% We find no evidence for increased velocity dispersion with decreasing teff in
+% either vb or vz.
+% We find that sigma clipping is necessary for vb but not vz and do not find
+% that the outliers are distributed towards higher galactic latitudes.
+% }
 
 % \racomment{Trevor suggest that stars forming in clusters could be the reason
 % why young stars are so dynamically cool.}
