--- a/paper/method.tex
+++ b/paper/method.tex
@@ -89,30 +89,14 @@ including stars with $b > 15$\degrees\ led to a larger number of \vb\ outliers
 at low stellar mass.
 15\degrees\ was found to be an adequate compromise between maintaining a close
 relationship between \vb\ and \vz\ and keeping a large enough sample size to
-provide meaningful results.
+provide meaningful results as we found that reducing this to 10\degrees did
+not significantly affect our results.
 We also found that the anti-correlation between stellar mass and $b$ is
 negligable for stars cooler than 5000 K.
 For this reason, and because the rotational evolution of old, G stars does not
 follow a simple Skumanich-like spin-down law \citep{vansaders2016}, we
 restricted our sample to temperatures between \tmin\ and 5000 K, \ie\ K
 dwarfs.
-
-To explore the relationship between rotation period, \teff\ and age, we
-selected groups of stars within different age ranges \citep[where age was
-calculated using the][gyrochronology relation]{angus2019}, and calculated the
-velocity dispersion: the standard deviation of velocities, \sigmavb, as a
-function of effective temperature for each age group.
-We performed 3$\sigma$ sigma-clipping on the stellar velocities in each age
-and temperature bin to remove non-Gaussian outliers.
-Without sigma-clipping, we found that a small number of high velocity
-outliers at the low-temperature end of our sample substantially raised the
-velocity dispersion for cooler stars.
-Ages were calculated using dereddened \gaia\ \gcolor\ color, however
-throughout this paper we show rotation periods as a function of {\it effective
-temperature}.
-We chose to use effective temperatures and not colors in this analysis as it
-is the linear quantity and therefore easier to divide into bins of roughly
-equal numbers of stars.
 
 % \begin{figure}
 %   \caption{
